[gd_scene load_steps=8 format=2]

[ext_resource path="res://ui/gridmenu/GridMenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/ui/whitespace.png" type="Texture" id=2]
[ext_resource path="res://assets/flags/rainbow.png" type="Texture" id=3]
[ext_resource path="res://ui/menus/account/usernamepass.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/theme/main.tres" type="Theme" id=6]
[ext_resource path="res://ui/animations/thehalo.tres" type="Material" id=7]
[ext_resource path="res://ui/menus/account/Account.gd" type="Script" id=8]

[node name="account" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 8 )

[node name="H" type="HBoxContainer" parent="."]
margin_right = 1422.0
margin_bottom = 50.0

[node name="InfoLabel" type="Label" parent="H"]
margin_right = 1422.0
margin_bottom = 50.0
size_flags_horizontal = 3

[node name="LogOut" type="Button" parent="H"]
visible = false
margin_left = 1209.0
margin_right = 1422.0
margin_bottom = 106.0
hint_tooltip = "log out"
focus_mode = 0
enabled_focus_mode = 0
text = "log out"

[node name="choose" type="TabContainer" parent="."]
margin_left = 177.0
margin_top = 65.0
margin_right = 1245.0
margin_bottom = 634.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="signup" type="VBoxContainer" parent="choose"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 90.0
margin_right = -30.0
margin_bottom = -30.0
custom_constants/separation = 5

[node name="usernamepass" parent="choose/signup" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1008.0
margin_bottom = 227.0

[node name="flag" parent="choose/signup" instance=ExtResource( 1 )]
margin_left = 389.0
margin_top = 232.0
margin_right = 619.0
margin_bottom = 338.0
rect_min_size = Vector2( 230, 0 )
size_flags_horizontal = 4
text = "flag"
icon = ExtResource( 3 )

[node name="signupbutton" type="Button" parent="choose/signup"]
margin_left = 389.0
margin_top = 343.0
margin_right = 619.0
margin_bottom = 449.0
rect_min_size = Vector2( 230, 0 )
hint_tooltip = "sign up"
focus_mode = 0
size_flags_horizontal = 4
enabled_focus_mode = 0
text = "sign up"

[node name="signin" type="VBoxContainer" parent="choose"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 90.0
margin_right = -30.0
margin_bottom = -30.0
custom_constants/separation = 5

[node name="usernamepass" parent="choose/signin" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 177.0
margin_right = 1185.0
margin_bottom = 227.0

[node name="signinbutton" type="Button" parent="choose/signin"]
margin_left = 566.0
margin_top = 232.0
margin_right = 796.0
margin_bottom = 338.0
rect_min_size = Vector2( 230, 0 )
hint_tooltip = "sign in"
focus_mode = 0
size_flags_horizontal = 4
enabled_focus_mode = 0
text = "sign in"

[node name="LoadingAnimation" type="TextureRect" parent="."]
visible = false
material = ExtResource( 7 )
margin_left = 511.0
margin_top = 649.0
margin_right = 911.0
margin_bottom = 1049.0
rect_min_size = Vector2( 400, 400 )
hint_tooltip = "loading..."
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource( 2 )
expand = true

[connection signal="pressed" from="H/LogOut" to="." method="log_out"]
[connection signal="tab_changed" from="choose" to="." method="_on_choose_tab_changed"]
[connection signal="pressed" from="choose/signup/signupbutton" to="." method="_on_signup_pressed"]
[connection signal="pressed" from="choose/signin/signinbutton" to="." method="_on_signin_pressed"]
